--- a/src/.env.exmple
+++ b/src/.env.exmple
@@ -1,6 +1,6 @@
 APP_NAME=Attendance
 APP_ENV=local
-APP_KEY=base64:9SHXRK2sxOvruMlcl6Ui5lGu6uEG11j1ixgBTw5HgrE=
+APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Tokyo
 APP_URL=http://localhost
@@ -44,8 +44,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=09c8e54db84563
-MAIL_PASSWORD=c2a3fb383970ec
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_FROM_ADDRESS="info@attendance.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
