--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -10,4 +10,4 @@ xdebug.mode = debug
 xdebug.start_with_request = yes
 xdebug.discover_client_host = 0
 xdebug.client_port = 9005
-xdebug.log=/tmp/xdebug.log
+xdebug.log=/var/www/xdebug.log
