--- a/src/.env.testing
+++ b/src/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Attendance
 APP_ENV=test
-APP_KEY=base64:oMA6GV6j8cJoypURGck9R8Ii/F2R8QVeAwpfLmVwKa8=
+APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Tokyo
 APP_URL=http://localhost
