--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,71 @@ docker/mysql/data/attendance_test/request_attendances.ibd
 docker/mysql/data/attendance_test/request_rests.ibd
 docker/mysql/data/attendance_test/rests.ibd
 docker/mysql/data/attendance_test/users.ibd
+docker/mysql/data/auto.cnf
+docker/mysql/data/binlog.000014
+docker/mysql/data/binlog.000015
+docker/mysql/data/binlog.000016
+docker/mysql/data/binlog.000017
+docker/mysql/data/binlog.000018
+docker/mysql/data/binlog.000019
+docker/mysql/data/binlog.000020
+docker/mysql/data/binlog.000021
+docker/mysql/data/binlog.000022
+docker/mysql/data/binlog.000023
+docker/mysql/data/binlog.000024
+docker/mysql/data/binlog.000025
+docker/mysql/data/binlog.000026
+docker/mysql/data/binlog.000027
+docker/mysql/data/binlog.000028
+docker/mysql/data/binlog.000029
+docker/mysql/data/binlog.000030
+docker/mysql/data/binlog.000031
+docker/mysql/data/binlog.000032
+docker/mysql/data/binlog.000033
+docker/mysql/data/binlog.000034
+docker/mysql/data/binlog.000035
+docker/mysql/data/binlog.000036
+docker/mysql/data/binlog.000037
+docker/mysql/data/binlog.000038
+docker/mysql/data/binlog.000039
+docker/mysql/data/binlog.000040
+docker/mysql/data/binlog.000041
+docker/mysql/data/binlog.000042
+docker/mysql/data/binlog.000043
+docker/mysql/data/binlog.000044
+docker/mysql/data/binlog.000045
+docker/mysql/data/binlog.000046
+docker/mysql/data/binlog.000047
+docker/mysql/data/binlog.000048
+docker/mysql/data/binlog.000049
+docker/mysql/data/binlog.000050
+docker/mysql/data/binlog.000051
+docker/mysql/data/binlog.000052
+docker/mysql/data/binlog.000053
+docker/mysql/data/binlog.000054
+docker/mysql/data/binlog.000055
+docker/mysql/data/binlog.000056
+docker/mysql/data/binlog.000057
+docker/mysql/data/binlog.000058
+docker/mysql/data/binlog.000059
+docker/mysql/data/binlog.000060
+docker/mysql/data/binlog.index
+docker/mysql/data/ib_buffer_pool
+docker/mysql/data/attendance_db/admins.ibd
+docker/mysql/data/attendance_db/attendances.ibd
+docker/mysql/data/attendance_db/failed_jobs.ibd
+docker/mysql/data/attendance_db/migrations.ibd
+docker/mysql/data/attendance_db/password_reset_tokens.ibd
+docker/mysql/data/attendance_db/personal_access_tokens.ibd
+docker/mysql/data/attendance_db/request_attendances.ibd
+docker/mysql/data/attendance_db/request_rests.ibd
+docker/mysql/data/attendance_db/rests.ibd
+docker/mysql/data/attendance_db/users.ibd
+docker/mysql/data/attendance_test/admins.ibd
+docker/mysql/data/attendance_test/attendances.ibd
+docker/mysql/data/attendance_test/migrations.ibd
+docker/mysql/data/attendance_test/personal_access_tokens.ibd
+docker/mysql/data/attendance_test/request_attendances.ibd
+docker/mysql/data/attendance_test/request_rests.ibd
+docker/mysql/data/attendance_test/rests.ibd
+docker/mysql/data/attendance_test/users.ibd
