--- a/src/.env.testing
+++ b/src/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Attendance
 APP_ENV=test
-APP_KEY=
+APP_KEY=base64:12rIbAIstqa7a4JHpcnIwrEO4/QthVEpw454FkUoe90=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Tokyo
 APP_URL=http://localhost
@@ -42,12 +42,20 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=
-MAIL_PASSWORD=
+MAIL_HOST=mailhog
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="info@attendance.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+# MAIL_MAILER=smtp
+# MAIL_HOST=sandbox.smtp.mailtrap.io
+# MAIL_PORT=2525
+# MAIL_USERNAME=09c8e54db84563
+# MAIL_PASSWORD=c2a3fb383970ec
+# MAIL_FROM_ADDRESS="info@attendance.com"
+# MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
